Add flood control features to Discord notifier
- Introduced new environment variables: MAX_ALERTS_PER_ITERATION, EMBED_ALERTS_PER_MESSAGE, and MAX_DISCORD_RETRIES for better control over alert sending.
- Updated the DiscordNotifier class to handle embeds and implement exponential backoff for rate limiting.
- Modified alert sending logic to batch alerts and respect iteration limits.
- Enhanced documentation in PLAN.md to reflect new flood control mechanisms.

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ SMOOTHING_N=3
 # Max alerts per player per UTC day
 MAX_ALERTS_PER_PLAYER=3
 
+# Flood control
+MAX_ALERTS_PER_ITERATION=10
+EMBED_ALERTS_PER_MESSAGE=10
+MAX_DISCORD_RETRIES=3
+
 # If true, don't send to Discord; log to console instead
 DRY_RUN=false
 
